--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "Siji", "Tamzen", "Clear Sans", "Font Awesome 6 Free Solid";
+    font-family: "Siji", "Tamzen", "Clear Sans", "Font Awesome 6 Free Solid", "Material Icons";
     font-size: 30px;
     min-height: 0;
     margin: 0px 10px;
